<resources>
    <string name="app_name">CollegeScheduler</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_list">List</string>
    <string-array name="item_types">
        <item>Courses</item>
        <item>Assignments</item>
        <item>Exams</item>
    </string-array>
    <string-array name="assignment_sort_types">
        <item>Due Date</item>
        <item>Course</item>
    </string-array>
    <string-array name="home_item_types">
        <item>All</item>
        <item>Assignments</item>
        <item>Exams</item>
    </string-array>
    <string name="add">Add</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="add_course">Add Course</string>
    <string name="course_name">Course Name</string>
    <string name="professor_name">Professor Name</string>
    <string name="location">Location</string>
    <string name="submit">SUBMIT</string>
    <string name="assignment_title">Assignment Title</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="exam_title">Exam Title</string>
    <string name="select_exam_date">Select Exam Date</string>
    <string name="select_exam_time">Select Exam Time</string>
    <string name="back">BACK</string>
    <string name="select_course_time">Select Course Time</string>
</resources>